# msg-auth

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/msg_auth/: __init__.py  authz_config.py  microsoft.py  protocol.py  router.py  session.py
